crates/data-dict/tests/snapshots/validate__lint_dd008_units_on_non_quantity.snap
---
source: crates/data-dict/tests/validate.rs
expression: "failing_diagnostic(\"lint/dd008-units-on-non-quantity.yaml\")"
---
Error: [DD008] data-dict.yaml lint
    ╭─[ lint/dd008-units-on-non-quantity.yaml:13:16 ]
    │
 13 │         units: place
    │                ──┬──  
    │                  ╰──── column `races.finish_rank` has `units` but type `number(ordinal)`; `units` is only valid on `number(quantity)` columns
────╯
