crates/data-dict/tests/snapshots/validate__lint_dd009_time_zone_on_non_datetime.snap
---
source: crates/data-dict/tests/validate.rs
expression: "failing_diagnostic(\"lint/dd009-time-zone-on-non-datetime.yaml\")"
---
Error: [DD009] data-dict.yaml lint
    ╭─[ lint/dd009-time-zone-on-non-datetime.yaml:13:20 ]
    │
 13 │         time_zone: America/New_York
    │                    ────────┬───────  
    │                            ╰───────── column `events.event_day` has `time_zone` but type `date`; `time_zone` is only valid on `datetime` columns
────╯
