crates/data-dict/tests/snapshots/validate__lint_s05_conflicts_not_on_both_sides.snap
---
source: crates/data-dict/tests/validate.rs
expression: "failing_diagnostic(\"lint/s05-conflicts-not-on-both-sides.yaml\")"
---
Error: [S07]
    ╭─[ lint/s05-conflicts-not-on-both-sides.yaml:13:15 ]
    │
 13 │       - name: id
    │               ─┬  
    │                ╰── column `food.id` has type `number(id)` but is missing the expected `examples` property
────╯

Error: [S07]
    ╭─[ lint/s05-conflicts-not-on-both-sides.yaml:23:15 ]
    │
 23 │       - name: id
    │               ─┬  
    │                ╰── column `food_nutrient.id` has type `number(id)` but is missing the expected `examples` property
────╯

Error: [S07]
    ╭─[ lint/s05-conflicts-not-on-both-sides.yaml:27:15 ]
    │
 27 │       - name: food_id
    │               ───┬───  
    │                  ╰───── column `food_nutrient.food_id` has type `number(id)` but is missing the expected `examples` property
────╯

Error: [S07]
    ╭─[ lint/s05-conflicts-not-on-both-sides.yaml:31:15 ]
    │
 31 │       - name: amount
    │               ───┬──  
    │                  ╰──── column `food_nutrient.amount` has type `number(quantity)` but is missing the expected `range` property
────╯

Error: [S05]
    ╭─[ lint/s05-conflicts-not-on-both-sides.yaml:39:17 ]
    │
 39 │     conflicts: [amount]
    │                 ───┬──  
    │                    ╰──── `conflicts` entry `amount` is not a column of `food`
────╯
